DataList overflow fixed on small screens when item contains long text

--- a/Upnp.Control.Web/ClientApp/src/styles/_layout-grid.scss
+++ b/Upnp.Control.Web/ClientApp/src/styles/_layout-grid.scss
@@ -62,6 +62,10 @@ $grid-responsive-auto-breakpoints: null sm;
     }
 }
 
+.grid-list {
+    grid: auto / 100%;
+}
+
 .grid-auto-m15 {
     @include grid-auto-columns($min: 15rem, $max: 1fr, $mode: auto-fill);
 }
